<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_item_ClickHere"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView_item_Icon"
        android:layout_width="@dimen/list_Width"
        android:layout_height="@dimen/list_Height"
        android:background="#F2F2F2"
        android:contentDescription="@string/String_ImageContentDescription"
        android:maxWidth="@dimen/list_Width"
        android:maxHeight="@dimen/list_Height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_item_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/String_MovieTitle"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView_item_Icon"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_item_watched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:clickable="false"
        android:text="@string/String_Watched"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_item_Icon"
        app:layout_constraintStart_toEndOf="@+id/imageView_item_Icon" />

    <TextView
        android:id="@+id/textView_item_IMDBRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_item_Title" />

    <TextView
        android:id="@+id/textView_item_UserRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/String_RaingUser"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_item_watched"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
